Added cities and names

--- a/cities.html
+++ b/cities.html
@@ -32,15 +32,15 @@
             <div class="col-md">Pennsylvania</div>
             <div class="col-md">Atlanta</div>
             <div class="col-md">North Carolina</div>
-            <div class="col-md">Dallas<div>
-                    <div class="col-md">Utha</div>
-                    <div class="col-md">Los Angeles</div>
-                    <div class="col-md">Arizona</div>
-                </div>
-            </div>
-            <p>The city names row (col-md) breaks first when reducing the screen size because
-                the city names do not wrap to the next line automatically, while the letters
-                row (col-sm-2) stacks vertically as the screen size decreases, preserving the layout.</p>
+            <div class="col-md">Dallas</div>
+            <div class="col-md">Utha</div>
+            <div class="col-md">Los Angeles</div>
+            <div class="col-md">Arizona</div>
+        </div>
+    </div>
+    <p>The city names row (col-md) breaks first when reducing the screen size because
+     the city names do not wrap to the next line automatically, while the letters
+    row (col-sm-2) stacks vertically as the screen size decreases, preserving the layout.</p>
 </body>
 
 </html>
