Added images and tables

--- a/cities.html
+++ b/cities.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>My Cities</title>
-    <h6>Visit Cities with Shivani Pandula</h6>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,6 +18,7 @@
 
 <body>
     <div class="container">
+        <h6>Visit Cities with Shivani Pandula</h6>
         <div class="row">
             <div class="col-sm-2">P</div>
             <div class="col-sm-2">A</div>
@@ -41,6 +41,77 @@
     <p>The city names row (col-md) breaks first when reducing the screen size because
      the city names do not wrap to the next line automatically, while the letters
     row (col-sm-2) stacks vertically as the screen size decreases, preserving the layout.</p>
+
+    <div class="container">
+        <img class="img-fluid" src="arizona1.jpg" alt="Arizona" height="400" width="400">
+        <img class="img-fluid" src="Atlanta.jpg"  alt="Atlanta"  height="400" width="400">
+        <img class="img-fluid" src="LosAngeles2.jpg"  alt="LosAngeles"  height="400" width="400">
+        </div><br>
+  
+        <div class="container">
+          <img class="img-thumbnail" src="Arizona1.jpg" alt="Arizona" height="400" width="400">
+          <img class="img-thumbnail" src="Atlanta.jpg"  alt="Atlanta"  height="400" width="400">
+          <img class="img-thumbnail" src="LosAngeles2.jpg" alt="LosAngeles" height="400" width="400">
+        </div><br>
+
+        <div class="container">
+            <h2>City, River, and Tree Table</h2>
+            <caption>Table Data is HERE</caption>
+            <table class="table table-bordered table-striped table-hover">
+                
+                <thead class="table-primary">
+                    <tr style="color:rgb(47, 201, 188)">
+                        <th scope="col">Letter</th>
+                        <th scope="col">City</th>
+                        <th scope="col">River</th>
+                        <th scope="col">Tree</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class= "table-secondary">
+                        <th scope="row">P</th>
+                        <td>Pennsylvania</td>
+                        <td>Po River</td>
+                        <td>Pineapple Tree</td>
+                    </tr>
+                    <tr class="table-success">
+                        <th scope="row">A</th>
+                        <td>Atlanta</td>
+                        <td>Attahoochee River</td>
+                        <td>Avacado Tree</td>
+                    </tr>
+                    <tr class="table-danger">
+                        <th scope="row">N</th>
+                        <td>North Carolina</td>
+                        <td>Neuse River</td>
+                        <td>Neem Tree</td>
+                    </tr>
+                    <tr class="table-warning">
+                        <th scope="row">D</th>
+                        <td>dallas</td>
+                        <td>Danya River</td>
+                        <td>Dogwood Tree</td>
+                    </tr>
+                    <tr class="table-info">
+                        <th scope="row">U</th>
+                        <td>Utha</td>
+                        <td>Uthanya River</td>
+                        <td>ulm Tree</td>
+                    </tr>
+                    <tr class="table-light">
+                        <th scope="row">L</th>
+                        <td>Los Angeles</td>
+                        <td>Laha River</td>
+                        <td>Lilly Tree</td>
+                    </tr>
+                    <tr class="table-dark">
+                        <th scope="row">A</th>
+                        <td>Arizona</td>
+                        <td>Abita River</td>
+                        <td>Apple Tree</td>
+                    </tr>
+                </tbody>
+            </table>
 </body>
 
 </html>
