--- a/cities.html
+++ b/cities.html
@@ -171,6 +171,24 @@
             </div>
         </div>
         <br>
+        <br>
+        <form>
+            <div class="form-group">
+                <label for="Email1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="Email1" placeholder="Enter Your Email Address"  aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="form-group">
+                <label for="Password1" class="form-label">City</label>
+                <input type="text" class="form-control" id="Password1" placeholder="Enter your city">
+            </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <br><br>
 </body>
 
 </html>
