--- a/cities.html
+++ b/cities.html
@@ -175,7 +175,8 @@
         <form>
             <div class="form-group">
                 <label for="Email1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="Email1" placeholder="Enter Your Email Address"  aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="Email1" placeholder="Enter Your Email Address"
+                    aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="form-group">
@@ -189,6 +190,50 @@
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
         <br><br>
+
+
+        <h3>Bonus</h3>
+<div class="container">
+    <div class="row">
+        <div class="col-md">
+        <div class="card" style="width: 18rem;">
+            <img src="Dallas.jpg" class="card-img-top" alt="AfricanViolet">
+            <div class="card-body">
+                <h5 class="card-title">Dallas</h5>
+                <p class="card-text">The city has a huge art and music scene,
+                     but is also a place of historical significance, following the assassination of John F. Kennedy on a
+                      visit here in 1963, putting Dallas in the international spotlight.</p>
+                <a href="https://en.wikipedia.org/wiki/Dallas" class="btn btn-primary">know more</a>
+            </div><br>
+        </div>
+        </div>
+        <div class="col-md">
+        <div class="card" style="width: 18rem;">
+            <img src="arizona1.jpg" class="card-img-top" alt="grapevines">
+            <div class="card-body">
+                <h5 class="card-title">Arizona</h5>
+                <p class="card-text">Arizona, a southwestern U.S. state, 
+                    is best known for the Grand Canyon, the mile-deep chasm carved by 
+                    the Colorado River. Flagstaff, a ponderosa pine–covered mountain town,
+                     is a major gateway to the Grand Canyon.</p>
+                <a href="https://en.wikipedia.org/wiki/Arizona" class="btn btn-primary">know more</a>
+            </div><br>
+        </div>
+        </div>
+        <div class="col-md">
+        <div class="card" style="width: 18rem;">
+            <img src="losangeles.jpg" class="card-img-top" alt="NorfolkIslandPine">
+            <div class="card-body">
+                <h5 class="card-title">Los Angeles</h5>
+                <p class="card-text">Los Angeles is a sprawling Southern California city and 
+                    the center of the nation’s film and television industry. Near its iconic Hollywood sign,
+                     studios such as Paramount Pictures, Universal and Warner Brothers offer behind-the-scenes tours.</p>
+                <a href="https://en.wikipedia.org/wiki/List_of_tourist_attractions_in_Los_Angeless" class="btn btn-primary">know more</a>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
 </body>
 
 </html>
