--- a/cities.html
+++ b/cities.html
@@ -65,13 +65,13 @@
     <div class="container">
         <img class="img-fluid" src="arizona1.jpg" alt="Arizona" height="400" width="400">
         <img class="img-fluid" src="Dallas.jpg" alt="Dallas" height="400" width="400">
-        <img class="img-fluid" src="LosAngeles2.jpg" alt="LosAngeles" height="400" width="400">
+        <img class="img-fluid" src="losangeles2.jpg" alt="LosAngeles" height="400" width="400">
     </div><br>
 
     <div class="container">
-        <img class="img-thumbnail" src="Arizona1.jpg" alt="Arizona" height="400" width="400">
+        <img class="img-thumbnail" src="arizona1.jpg" alt="Arizona" height="400" width="400">
         <img class="img-thumbnail" src="Dallas.jpg" alt="Dallas" height="400" width="400">
-        <img class="img-thumbnail" src="LosAngeles2.jpg" alt="LosAngeles" height="400" width="400">
+        <img class="img-thumbnail" src="losangeles2.jpg" alt="LosAngeles" height="400" width="400">
     </div><br>
 
     <div class="container">
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-md">
                     <div class="card" style="width: 18rem;">
-                        <img src="losangeles.jpg" class="card-img-top" alt="NorfolkIslandPine">
+                        <img src="losangeles2.jpg" class="card-img-top" alt="NorfolkIslandPine">
                         <div class="card-body">
                             <h5 class="card-title">Los Angeles</h5>
                             <p class="card-text">Los Angeles is a sprawling Southern California city and
